# small_transformer

./: .gitignore  CMakeLists.txt  README.md  bench_block.py  create_transformer_pt.py  create_transformer_random.py  create_transformer_word.py  evaluate.py  setup.py  train.py
bindings/: bindings.cpp
generators/: fiction.py  gutenberg.py  opensub.py  program.py
model/: attention.py  tokenizer.py  transformer.py  transformer_block.py
